# VibeBlade

./: .gitignore  BENCHMARK_REPORT.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MODEL_AND_QUANTIZATION_GUIDE.md  QUICKSTART_GUIDE.md  README.md  SECURITY.md  WHITEPAPER.md  bench_dense_vs_moe.py  pyproject.toml  run_quality.sh  setup.py  setup_menu.py  test_bit.py  test_inference.py  test_one.py  test_quality.py  vibeblade-whitepaper.html  whitepaper.css
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  help_wanted.yml  model_support.yml  performance_report.yml  platform_support.yml  question.yml
.github/workflows/: build.yml
benchmarks/: bench_all.py
benchmarks/data/: bench_Gemma-2-2B.json  bench_Gemma-3-1B.json  bench_Llama-3.2-1B.json  bench_Phi-3-mini-4k.json  bench_Phi-3.5-mini.json  bench_Qwen2.5-0.5B.json  bench_Qwen2.5-1.5B.json  bench_Qwen2.5-3B.json  bench_Qwen3.5-MoE-0.87B.json  bench_TinyLlama-1.1B.json
cpp/: CMakeLists.txt  build_cpp.ps1  build_cpp.py  build_cpp.sh
cpp/include/: VibeBladeAsync.hpp  cuda_backend.h  cuda_kernels.h  dequant.h  fast_model.h  fp16_compat.h  ggml_types.h  gguf.h  kernels.h  neon_kernels.h  sampler.h  tokenizer.h
cpp/src/: activation.cpp  attention.cpp  bindings.cpp  cuda_backend.cpp  cuda_kernels.cu  dequant.cpp  fast_model.cpp  fp16_compat.cpp  gemm.cpp  gguf.cpp  norm.cpp  quantize.cpp  rope.cpp  sampler.cpp  softmax.cpp  tokenizer.cpp  win_compat.h
docs/: POWERINFER2_PLAN.md
references/: benchmark-may2026-large-models.md  full-4model-benchmark-may2026.md
scripts/: bench_3model_multi.py  bench_3run.py  bench_6way.py  bench_baseline_vs_optimized.py  bench_dflash.py  bench_full_4model.py  bench_moe.py  bench_pi_ts_optimize.py  bench_sweep_focused.py  debug_qwen_model.py  diagnose_forward.py  diagnose_model.py  verify_auto_tune.py
src/: kernels.cpp  kernels.metal  kernels_vulkan.glsl  metal_bridge.mm  vulkan_backend.cpp
tests/: test_async_executor.py  test_auto_tune.py  test_batching.py  test_cache.py  test_config.py  test_confu.py  test_ema_neuron.py  test_eviction.py  test_generate.py  test_gpu.py  test_grammar.py  test_kquants.py  test_kv_quant.py  test_loader.py  test_minicache.py  test_model_hub.py  test_model_platform.py  test_moe.py  test_moe_advanced.py  test_moe_executor.py  test_moe_oracle.py  test_moe_profiler.py  test_native.py  test_onnx_backend.py  test_openai_server.py  test_paged_attn.py  test_phase_scheduler.py  test_quant.py  test_rotatekv.py  test_sagesched.py  test_sarathi.py  test_scheduler.py  test_smoothquant.py  test_sparse.py  test_sparse_attn.py  test_speculative.py  test_tiered_memory.py  test_transformer.py
tools/: bench_full.py  bench_one.py  bench_spec.py  bench_speed.py  debug_gguf_layout.py  rotorquant_preprocess.py  test_rotorquant_correctness.py  test_rq_f16.py
vibeblade/: __init__.py  __main__.py  _cli_run.py  accelerated.py  async_executor.py  auto_tune.py  backend.py  batching.py  benchmark.py  cache.py  chat.py  cli.py  config.py  confu.py  converter.py  dflash.py  dflash_llama.py  draft_heads.py  eviction.py  fast_backend.py  generate.py  gguf_meta.py  gpu.py  kv_quant.py  llama_backend.py  loader.py  memory.py  minicache.py  model_hub.py  model_manager.py  moe.py  moe_advanced.py  moe_executor.py  moe_oracle.py  moe_profiler.py  neural_draft.py  onnx_backend.py  openai_server.py  paged_attn.py  phase_scheduler.py  (+19 more)
vibeblade/backends/: __init__.py  openai_http_backend.py  sglang_backend.py  vllm_backend.py
vibeblade/grammar/: __init__.py  constraint.py  ebnf.py  fsm.py  json_schema.py  regex_grammar.py
web/: app.py
web/static/: app.js  index.html  style.css
